[gd_scene load_steps=4 format=3 uid="uid://dl8evutru35w8"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_m27c1"]
[ext_resource type="FontFile" uid="uid://bfwb216nuhnwf" path="res://fonts/PlayaExtendedRegular-yw5E3.ttf" id="2_gkopm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wyt8n"]

[node name="MenuContainer" type="VBoxContainer"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.0
offset_top = -42.5
offset_right = 207.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10
script = ExtResource("1_m27c1")

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0.592157, 0.592157, 0.592157, 1)
theme_override_fonts/font = ExtResource("2_gkopm")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_wyt8n")
text = "Continue"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0.592157, 0.592157, 0.592157, 1)
theme_override_fonts/font = ExtResource("2_gkopm")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_wyt8n")
text = "Quit"

[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
